<package>
  	<name>maxbotix_i2c</name>
  	<version>0.1.0</version>
  	<description>MaxBotix I2CL-Maxsensor driver for ROS</description>
  	<maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>

  	<license>BSD</license>

  	<author email="mahisorn.w@hiveground.com">Mahisorn Wongphati</author>

	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
  	<run_depend>roscpp</run_depend>	
	<build_depend>sensor_msgs</build_depend>
  	<run_depend>sensor_msgs</run_depend>  			
</package>
